kubernetes/apps/flux-system/weave-gitops/app/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitops
  namespace: networking
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`gitops.${SECRET_DOMAIN}`)
      middlewares:
        - name: external-default
        # - name: basicauth
      services:
        - name: weave-gitops
          namespace: flux-system
          port: 9001
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
